# gmic-sharp-native

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
msvc/: GmicSharpNative.sln  GmicSharpNative.vcxproj  GmicSharpNative.vcxproj.filters  cpp.hint  version.rc
src/: GmicSharpNative.cpp  GmicSharpNative.h  version.h
